--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,9 @@ pyserial-asyncio = "^0.6"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.mypy.overrides]]
+module = [
+    "pymodbus.*",
+]
+ignore_missing_imports = true
