Refactor CPA1110 client, add snapshot & tests
Rework the synchronous CPA1110 Modbus client and API: add CPASnapshot dataclass, improve FloatProperty decoding, add context-manager support (connect/close), auto_refresh and device_id handling, and stronger Modbus response validation with typed CPA1110Error/CPAConnectionError/CPAProtocolError exceptions. Convert warning/error enums to IntFlag, rename many properties to snake_case, and provide a read_snapshot() helper that decodes a full register set. Add unit tests for client behavior and control/read flows, update README with usage and new uv-based install/sync instructions, migrate pyproject from Poetry to PEP-621/hatchling format and update dependency declarations, remove poetry.lock, and add uv.lock plus minimal VSCode settings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,35 @@
-[tool.poetry]
+[project]
 name = "cpa1110"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
-authors = ["ograsdijk <o.grasdijk@gmail.com>"]
 readme = "README.md"
+requires-python = ">=3.11"
+authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
+dependencies = [
+    "pymodbus>=3.0.0,<4.0.0",
+    "pyserial-asyncio>=0.6,<0.7",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-pymodbus = "^3.0.0"
-pyserial-asyncio = "^0.6"
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "ruff>=0.8.0",
+    "mypy>=1.10.0",
+]
 
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [[tool.mypy.overrides]]
 module = [
     "pymodbus.*",
 ]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[tool.ruff]
+line-length = 88
